# gessinger

./: Makefile  Makefile.am  README.md  config.xml  configure.ac  gessinger.ui  main  main.c  preset.ui  presets.xml  teste-cairo.c
data/: Makefile.am
data/ui/: Makefile.am  gessinger.ui
gessinger/: Makefile.am  font.c  font.c~  font.h  font.h~  gui.c  gui.h  interface.c  interface.h  jscontrol.c  jscontrol.h  main.c  midi.c  midi.h  preset.c  preset.h  presets_config.c  presets_config.h  xmlconfig.c  xmlconfig.h
